turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: not found: value i
		if (getCouleurSol() == colors(i)) {
                                              ^LangtonsAnt:5: error: not found: value i
			if (rule(i) == 'R') {
                                 ^